--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,9 +17,7 @@
     "import re\n",
     "from pathlib import Path\n",
     "from BAG_Code.BayesianAttackGraph import parse_dot, rmv_node, evidences_to_string\n",
-    "from BAG_Code.createANDtable import create_AND_table\n",
-    "from BAG_Code.createORtable import create_OR_table\n",
-    "from BAG_Code.Tools_tree import kts_layer_original\n",
+    "from BAG_Code.Tools_tree import kts_layer_original, kts_layer_static\n",
     "import BAG_Code.Loopy as Loopy\n",
     "\n",
     "from pgmpy.inference.ExactInference import BeliefPropagation\n",
@@ -35,20 +33,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Name of the simulation\n",
     "simulation = \"HighLevel\"\n",
+    "# simulation = \"HighLevel_no_HP\"\n",
     "\n",
     "# Constante for probability one\n",
-    "ONE = 0.999"
+    "ONE = 0.999\n",
+    "\n",
+    "# Path to the folder containing the tree\n",
+    "path = Path.cwd() / (\"Personnal_simulations/output_\" + simulation + \"/strongly_connected_components/\")\n",
+    "file_name = \"ag-nocycles.dot\"\n",
+    "path_to_dot = path / file_name\n",
+    "basename = \"classic\"\n",
+    "# basename = \"no_honey\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +85,6 @@
     "    def node_to_dot(node):\n",
     "        prob = 1\n",
     "        if node not in evidences.keys() and calculate_probabilities == 1:\n",
-    "            # prob = prop.query([node], evidence=evidences).values[1]\n",
     "            if node in nodes_1:\n",
     "                prob = total_prob1.marginalize([n for n in nodes_1 if n != node], inplace=False).values[1]\n",
     "            elif node in nodes_2:\n",
@@ -133,16 +138,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Path to the folder containing the tree\n",
-    "path = Path.cwd() / (\"Personnal_simulations/output_\" + simulation + \"/strongly_connected_components/\")\n",
-    "file_name = \"ag-nocycles.dot\"\n",
-    "path_to_dot = path / file_name\n",
-    "basename = \"classic\"\n",
-    "\n",
     "# We all read from the file, adding probabilities in the same time\n",
     "BAG, edges, nodes = parse_dot(open(path_to_dot, 'r').read(), ONE)\n",
     "\n",
@@ -151,135 +150,41 @@
     "prop0 = BeliefPropagation(BAG_ref)\n",
     "\n",
     "# We create a dictionary to get the node number from the label\n",
-    "inverted_nodes = {int(v['label'].split(':')[0]): k for k, v in nodes.items()}\n",
-    "kts_layer_original(BAG, ONE, nodes)"
+    "kts_layer_original(BAG, ONE, nodes)\n",
+    "kts_layer_static(BAG, ONE, nodes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BayesianNetwork with 34 nodes and 36 edges\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "to_dot(BAG_ref, nodes, [], path, \"reference\", display_kts=False, calculate_probabilities=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BayesianNetwork with 35 nodes and 61 edges\n",
-      "Time for the iteration 1 and bag: BayesianNetwork with 35 nodes and 61 edges is  27.057465076446533\n",
-      "BayesianNetwork with 43 nodes and 70 edges\n",
-      "Time for the iteration 2 and bag: BayesianNetwork with 43 nodes and 70 edges is  30.618544578552246\n",
-      "BayesianNetwork with 46 nodes and 75 edges\n",
-      "Time for the iteration 3 and bag: BayesianNetwork with 46 nodes and 75 edges is  345.66281819343567\n",
-      "BayesianNetwork with 54 nodes and 87 edges\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[55], line 11\u001b[0m\n\u001b[0;32m      9\u001b[0m kts_layer_original(BAG_changeant, ONE, nodes)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m evidence \u001b[38;5;129;01min\u001b[39;00m evidences:\n\u001b[1;32m---> 11\u001b[0m     \u001b[43mto_dot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBAG_changeant\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnodes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mevidence\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbasename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdisplay_kts\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcalculate_probabilities\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTime for the iteration\u001b[39m\u001b[38;5;124m\"\u001b[39m, i, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mand bag:\u001b[39m\u001b[38;5;124m\"\u001b[39m, BAG_changeant, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mis \u001b[39m\u001b[38;5;124m\"\u001b[39m, time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m-\u001b[39m timer)\n",
-      "Cell \u001b[1;32mIn[50], line 15\u001b[0m, in \u001b[0;36mto_dot\u001b[1;34m(BAG, nodes, evidences, path, basename, display_kts, calculate_probabilities)\u001b[0m\n\u001b[0;32m     13\u001b[0m nodes_3 \u001b[38;5;241m=\u001b[39m nodes_wo_evidences[(\u001b[38;5;28mlen\u001b[39m(nodes_wo_evidences)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m3\u001b[39m:]\n\u001b[0;32m     14\u001b[0m prop \u001b[38;5;241m=\u001b[39m BeliefPropagation(BAG)\n\u001b[1;32m---> 15\u001b[0m total_prob1 \u001b[38;5;241m=\u001b[39m \u001b[43mprop\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mquery\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnodes_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mevidence\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mevidences\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     16\u001b[0m total_prob2 \u001b[38;5;241m=\u001b[39m prop\u001b[38;5;241m.\u001b[39mquery(nodes_2, evidence\u001b[38;5;241m=\u001b[39mevidences)\n\u001b[0;32m     17\u001b[0m total_prob3 \u001b[38;5;241m=\u001b[39m prop\u001b[38;5;241m.\u001b[39mquery(nodes_3, evidence\u001b[38;5;241m=\u001b[39mevidences)\n",
-      "File \u001b[1;32mc:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\inference\\ExactInference.py:1130\u001b[0m, in \u001b[0;36mBeliefPropagation.query\u001b[1;34m(self, variables, evidence, virtual_evidence, joint, show_progress)\u001b[0m\n\u001b[0;32m   1121\u001b[0m \u001b[38;5;66;03m# Step 4: Run inference.\u001b[39;00m\n\u001b[0;32m   1122\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_query(\n\u001b[0;32m   1123\u001b[0m     variables\u001b[38;5;241m=\u001b[39mvariables,\n\u001b[0;32m   1124\u001b[0m     operation\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmarginalize\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1127\u001b[0m     show_progress\u001b[38;5;241m=\u001b[39mshow_progress,\n\u001b[0;32m   1128\u001b[0m )\n\u001b[1;32m-> 1130\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43morig_model\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1132\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m joint:\n\u001b[0;32m   1133\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m result\u001b[38;5;241m.\u001b[39mnormalize(inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "File \u001b[1;32mc:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\inference\\ExactInference.py:700\u001b[0m, in \u001b[0;36mBeliefPropagation.__init__\u001b[1;34m(self, model)\u001b[0m\n\u001b[0;32m    697\u001b[0m \u001b[38;5;28msuper\u001b[39m(BeliefPropagation, \u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(model)\n\u001b[0;32m    699\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(model, JunctionTree):\n\u001b[1;32m--> 700\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mjunction_tree \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_junction_tree\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    701\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    702\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mjunction_tree \u001b[38;5;241m=\u001b[39m copy\u001b[38;5;241m.\u001b[39mdeepcopy(model)\n",
-      "File \u001b[1;32mc:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\models\\BayesianNetwork.py:511\u001b[0m, in \u001b[0;36mBayesianNetwork.to_junction_tree\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    474\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    475\u001b[0m \u001b[38;5;124;03mCreates a junction tree (or clique tree) for a given Bayesian Network.\u001b[39;00m\n\u001b[0;32m    476\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    508\u001b[0m \u001b[38;5;124;03m>>> jt = G.to_junction_tree()\u001b[39;00m\n\u001b[0;32m    509\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    510\u001b[0m mm \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mto_markov_model()\n\u001b[1;32m--> 511\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mmm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_junction_tree\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\models\\MarkovNetwork.py:573\u001b[0m, in \u001b[0;36mMarkovNetwork.to_junction_tree\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    571\u001b[0m \u001b[38;5;66;03m# To compute clique potential, initially set it as unity factor\u001b[39;00m\n\u001b[0;32m    572\u001b[0m var_card \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_cardinality()[x] \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m node]\n\u001b[1;32m--> 573\u001b[0m clique_potential \u001b[38;5;241m=\u001b[39m \u001b[43mDiscreteFactor\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    574\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnode\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvar_card\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mones\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprod\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvar_card\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    575\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    576\u001b[0m \u001b[38;5;66;03m# multiply it with the factors associated with the variables present\u001b[39;00m\n\u001b[0;32m    577\u001b[0m \u001b[38;5;66;03m# in the clique (or node)\u001b[39;00m\n\u001b[0;32m    578\u001b[0m \u001b[38;5;66;03m# Checking if there's clique_factors, to handle the case when clique_factors\u001b[39;00m\n\u001b[0;32m    579\u001b[0m \u001b[38;5;66;03m# is empty, otherwise factor_product with throw an error [ref #889]\u001b[39;00m\n\u001b[0;32m    580\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m clique_factors:\n",
-      "File \u001b[1;32mc:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\factors\\discrete\\DiscreteFactor.py:87\u001b[0m, in \u001b[0;36mDiscreteFactor.__init__\u001b[1;34m(self, variables, cardinality, values, state_names)\u001b[0m\n\u001b[0;32m     84\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mVariables: Expected type list or array like, got string\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     86\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m config\u001b[38;5;241m.\u001b[39mBACKEND \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnumpy\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m---> 87\u001b[0m     values \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_dtype\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     88\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     89\u001b[0m     values \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m     90\u001b[0m         torch\u001b[38;5;241m.\u001b[39mTensor(values)\u001b[38;5;241m.\u001b[39mtype(config\u001b[38;5;241m.\u001b[39mget_dtype())\u001b[38;5;241m.\u001b[39mto(config\u001b[38;5;241m.\u001b[39mget_device())\n\u001b[0;32m     91\u001b[0m     )\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# for n in range(21, 35):\n",
-    "#     rmv_node(BAG, str(n))\n",
-    "#     nodes.pop(str(n))\n",
-    "evidences = [[11]]\n",
-    "import time\n",
-    "for i in range(1, 6):\n",
-    "    timer = time.time()\n",
-    "    BAG_changeant, edges, nodes = parse_dot(open(path / (\"ag-nocycles\" + str(i) +\".dot\" ), 'r').read(), ONE)\n",
-    "    kts_layer_original(BAG_changeant, ONE, nodes)\n",
-    "    for evidence in evidences:\n",
-    "        to_dot(BAG_changeant, nodes, evidence, path, basename, display_kts=False, calculate_probabilities=True)\n",
-    "    print(\"Time for the iteration\", i, \"and bag:\", BAG_changeant, \"is \", time.time() - timer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BayesianNetwork with 34 nodes and 36 edges\n"
-     ]
-    }
-   ],
-   "source": [
-    "evidence = []\n",
-    "to_dot(BAG, nodes, evidence, path, basename, display_kts=True, calculate_probabilities=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BayesianNetwork with 34 nodes and 36 edges\n",
-      "BayesianNetwork with 34 nodes and 36 edges\n",
-      "BayesianNetwork with 34 nodes and 36 edges\n"
-     ]
-    }
-   ],
-   "source": [
-    "evidences = [[9,7], [9], [9, 7, 19]]\n",
+    "# In the case with honeypots\n",
+    "evidences = [[],[9,7], [9], [9, 7, 19], [9, 7, 19, 17], [9, 7, 19, 17, 15]]\n",
     "for evidence in evidences:\n",
-    "    to_dot(BAG, nodes, evidence, path, basename, display_kts=False, calculate_probabilities=True)"
+    "    to_dot(BAG, nodes, evidence, path, basename, display_kts=False, calculate_probabilities=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BayesianNetwork with 34 nodes and 36 edges\n",
-      "BayesianNetwork with 34 nodes and 36 edges\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "evidences = [[9, 7, 19, 17], [9, 7, 19, 17, 15]]\n",
+    "# In the case no honeypots\n",
+    "evidences = [[], [9], [9, 7], [9, 7, 5], [9, 13, 5]]\n",
     "for evidence in evidences:\n",
-    "    to_dot(BAG, nodes, evidence, path, basename, display_kts=False, calculate_probabilities=True)"
+    "    to_dot(BAG, nodes, evidence, path, basename, display_kts=False, calculate_probabilities=1)"
    ]
   }
  ],
